Created Navbar & Header Layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
     <title>build this webpage - Google Search</title>
 </head>
 <body>
+    <!-- NAVBAR -->
+    <!-- make a list and use space between -->
+    <nav class="nav-bar">
+
+        <!-- LEFT -->
+        <div class="left">
+            <img class="logo" src="" alt="Google Logo">
+            <div class="search-bar">Search Bar</div>
+        </div>
+
+        <!-- RIGHT -->
+        <div class="right">
+            <div class="icon">Google apps</div>
+            <div class="icon">User Account</div>
+        </div>
+    </nav>
     
+    <!-- HEADER -->
+    <header class="header">
+        <!-- LISTs-->
+        <ul class="lists">
+            <!-- LIST 1 -->
+            <ul class="list-1">
+                <li><a href="#">All</a></li>
+                <li><a href="#">Videos</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#">Shopping</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
+            <!-- LIST 2 -->
+            <ul class="list-2">
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Tools</a></li>
+            </ul> 
+        </ul>
+        <!-- TEXT -->
+        <p class="hp">SafeSearch on</p>
+
+    </header>
 </body>
 </html>
