Created main section containing website links

--- a/index.html
+++ b/index.html
@@ -4,32 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"><script src="https://kit.fontawesome.com/dc7340ebac.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
     <title>build this webpage - Google Search</title>
+
 </head>
+
 <body>
+
     <!-- NAVBAR -->
-    <!-- make a list and use space between -->
     <nav class="nav-bar">
 
         <!-- LEFT -->
-        <div class="left">
-            <img class="logo" src="" alt="Google Logo">
-            <div class="search-bar">Search Bar</div>
-        </div>
+        <ul class="left">
+            <li>
+                <img class="showcase-1" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google.com">
+            </li>
+            <li class="lic">
+                <section class="showcase-2">
+                    <form action="#" class="icon">
+                        <i class="fas fa-search"></i>
+                        <input type="search" name="search" id="search" placeholder="Google">
+                        <i class="fas fa-microphone" id="mic"></i>
+                    </form>
+                </section>
+            </li>
+        </ul>
 
         <!-- RIGHT -->
-        <div class="right">
-            <div class="icon">Google apps</div>
-            <div class="icon">User Account</div>
-        </div>
+        <ul class="right">
+            <li>
+                <div class="icon">Google apps</div>
+            </li>
+            <li>
+                <div class="icon">User Account</div>
+            </li>
+        </ul>
     </nav>
     
     <!-- HEADER -->
     <header class="header">
+
         <!-- LISTs-->
         <ul class="lists">
+
             <!-- LIST 1 -->
             <ul class="list-1">
                 <li><a href="#">All</a></li>
@@ -39,6 +57,7 @@
                 <li><a href="#">Shopping</a></li>
                 <li><a href="#">More</a></li>
             </ul>
+
             <!-- LIST 2 -->
             <ul class="list-2">
                 <li><a href="#">Settings</a></li>
@@ -49,5 +68,114 @@
         <p class="hp">SafeSearch on</p>
 
     </header>
+
+    <!-- WEBSITE LINKS -->
+    <section class="section">
+
+        <p class="time">About 14,90,00,000 results (0.69 seconds)</p>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+        <div class="website-links">
+            <a href="#" class="links">https://victor-lf.github.io ›<span class="gsr">
+                google-search-results  <span class="arrow">▼</span> 
+            </span>
+            <br>
+            <span class="link-name">build this webpage - GitHub Pages</span>
+            </a>
+            <p class="link-text">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+
+    </section>
+
 </body>
+
 </html>
