--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
 
         <!-- RIGHT -->
         <ul class="right">
-            <li>
-                <div class="icon">Google apps</div>
-            </li>
-            <li>
-                <div class="icon">User Account</div>
-            </li>
+            <li><a href="#"><i class="fas fa-th" id="ga"></i></a></li>
+            <li><a href="#"><i class="fab fa-google-plus" id="user"></i></a></li>
         </ul>
     </nav>
     
@@ -50,7 +46,7 @@
 
             <!-- LIST 1 -->
             <ul class="list-1">
-                <li><a href="#">All</a></li>
+                <li><a href="#" id="all">All</a></li>
                 <li><a href="#">Videos</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Images</a></li>
